# vera

./: .gitignore  AGENTS.md  APP_DESCRIPTION.md  LICENSE  README.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: sdx_workbench.py
benchmarks/: benchmark_corpus.py
docs/: HANDOFF.md  README.md  agent-skills.md  architecture.md  cli-reference.md  collection-index.md  conversion.md  desktop-app-architecture.md  document-libraries.md  evaluation.md  examples.md  figures-and-regions.md  getting-started.md  mcp.md  python-api.md  sdx-spec-v0.1.md  searching.md  troubleshooting.md  validation-and-export.md  vera-spec-v0.1.md
examples/: docling-paraphrase-queries.json  docling-queries.json  gsmm-queries.json
skills/: vera-ask.md  vera.md
skills/vera/: SKILL.md
skills/vera/references/: cli-reference.md  retrieval-workflows.md
src/sdx/: cli.py  convert.py  document.py  embeddings.py  evaluate.py  mcp_server.py
src/sdx/parsers/: pdf.py
src/vera/: cli.py  convert.py  corpus.py  document.py  mcp_server.py
src/vera/cli/: __init__.py  commands.py  main.py
src/vera/core/: search.py  validation.py
src/vera/ingest/: __init__.py  chunking.py
src/vera/ingest/parsers/: __init__.py
src/vera/integrations/: mcp_server.py
tests/: conftest.py  test_agent_skill.py  test_app_responses.py  test_app_sidecar.py  test_blocks_figures.py  test_cli.py  test_collection_index.py  test_convert_search.py  test_corpus.py  test_document_access.py  test_documentation.py  test_evaluate.py  test_mcp_server.py  test_schema.py  test_tables.py  test_unit.py  test_validate.py
