[project]
name = "sdx"
version = "0.1.0"
description = "Semantic Document eXchange: portable semantic search layer for documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pymupdf>=1.23",
]
authors = [{name = "Kyle Willis"}]
license = {text = "Apache-2.0"}
keywords = ["semantic-search", "document", "sqlite", "embeddings", "rag", "pdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Indexing",
]

[project.urls]
Homepage = "https://github.com/dkylewillis/sdx"
Repository = "https://github.com/dkylewillis/sdx"
Specification = "https://github.com/dkylewillis/sdx/blob/main/docs/sdx-spec-v0.1.md"

[project.optional-dependencies]
ml = ["sentence-transformers>=2.7"]
workbench = ["streamlit>=1.35"]
dev = ["pytest>=8", "reportlab>=4"]

[project.scripts]
sdx = "sdx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
