[project]
name = "vera-workspace"
version = "0.1.0"
description = "VERA mono-repo workspace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vera-doc",
  "vera-cli",
  "vera-app",
]
authors = [{name = "Kyle Willis"}]
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = ["pytest>=8", "reportlab>=4", "mcp>=1.0"]
ml = ["sentence-transformers>=2.7"]
workbench = ["vera-app"]
mcp = ["mcp>=1.0"]

[tool.uv.workspace]
members = [
  "packages/vera-doc",
  "packages/vera-cli",
  "packages/vera-app",
]

[tool.uv.sources]
vera-doc = { workspace = true }
vera-cli = { workspace = true }
vera-app = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.pytest.ini_options]
pythonpath = [
  "packages/vera-doc/src",
  "packages/vera-cli/src",
  "packages/vera-app/src",
]
testpaths = ["tests"]
addopts = "-q"
